--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,12 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+
+url = "https://pypi.anaconda.org/berend/simple"
+verify_ssl = true
+name = "berend"
+
 
 [packages]
 
@@ -17,4 +23,4 @@ setuptools = "==38.5.1"
 wheel = "==0.30.0"
 auditwheel = "==1.8.0"
 delocate = "==0.7.3"
-"9ec1285" = {path = "./../vtkwheel/dist/VTK-8.1.0-cp36-cp36m-macosx_10_13_x86_64.whl"}
+vtk = {version="==8.1.0", index="berend"}
