--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
-language: python
+language: objective-c
 os: osx
-python:
-  - "3.6"
 
 install:
-  - pip install -U pip pipenv
+  - brew install python
+  - which python3
+  - pip3 install --upgrade pip3
+  - pip3 install pipenv
   - pipenv install --dev
 
 script:
