--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: objective-c
 os: osx
 
 install:
-  - brew install python
-  - which python
-  - brew link --overwrite python
-  - which python
+  - brew install python3
+  - which python3
   - pip3 install --upgrade pip3
   - pip3 install pipenv
   - pipenv install --dev
