--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ osx_image: xcode9.2
 install:
   - brew install python3
   - which python3
-  - pip3 install --upgrade pip setuptools wheel
+  - python -m pip3 install --upgrade pip setuptools wheel
   - pip3 install pipenv
   - pipenv install --dev
   - pipenv graph
