--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,12 @@ osx_image: xcode9.2
 
 install:
   - brew install python3
-  - which python3
-  - pip3 install --upgrade pip setuptools wheel || true
-  - pip3 install pipenv || true
+  - brew install pipenv
   - pipenv --version
-  - pipenv install --dev
+  - pipenv install --dev --skip-lock
   - pipenv graph
-  - cat Pipfile.lock
-  - python3 -c "import json; data = json.load(open('Pipfile.lock')); assert data['default']['vtk']['index'] == 'berend'"
+  - ls $(pipenv --venv)/include
+  - if [[ -d $(pipenv --venv)/include/vtk-8.1 ]]; then return 1; fi
 
 script:
   - pipenv run python build_u3d.py
