--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ osx_image: xcode9.2
 
 install:
   - brew install python3
-  - brew install pipenv
+  - which python3
+  - pip3 install --upgrade pip setuptools wheel || true
+  - pip3 install --user pipenv || true
+  - which pipenv
   - pipenv --version
   - pipenv install --dev --skip-lock
   - pipenv graph
