--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ osx_image: xcode9.2
 
 before_install:
   - brew update
-  - brew install python3
+  - brew upgrade python
 
 install:
   - python3 --version
