--- a/Pipfile
+++ b/Pipfile
@@ -4,24 +4,23 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [[source]]
 
 url = "https://pypi.anaconda.org/berend/simple"
 verify_ssl = true
 name = "berend"
 
-
 [packages]
 
-vtk = {version="==8.1.0", index="berend"}
+vtk = {file = "https://anaconda.org/korijn/VTK/8.1.0/download/VTK-8.1.0-cp36-cp36m-linux_x86_64.whl"}
+# vtk = {version="==8.1.0", index="berend"}
 
 [dev-packages]
 
-cmake = {version="==0.9.0", index="pypi"}
-ninja = {version="==1.7.2.post2", index="pypi"}
-setuptools = {version="==38.5.1", index="pypi"}
-wheel = {version="==0.30.0", index="pypi"}
-auditwheel = {version="==1.8.0", sys_platform="=='linux'", index="pypi"}
-delocate = {version="==0.7.3", sys_platform="=='darwin'", index="pypi"}
-flake8 = {version="==3.5.0", index="pypi"}
+cmake = {version="~=0.9.0", index="pypi"}
+ninja = {version="~=1.7.2.post2", index="pypi"}
+setuptools = {version="~=38.5.1", index="pypi"}
+wheel = {version="~=0.30.0", index="pypi"}
+auditwheel = {version="~=1.8.0", sys_platform="=='linux'", index="pypi"}
+delocate = {version="~=0.7.3", sys_platform="=='darwin'", index="pypi"}
+flake8 = {version="~=3.5.0", index="pypi"}
