--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os: osx
 osx_image: xcode9.2
 
 before_install:
-  - brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/6e3f70c43a0cdd02280a1cfc78693ce1bc7eb5e4/Formula/python.rb
+  - brew upgrade https://raw.githubusercontent.com/Homebrew/homebrew-core/6e3f70c43a0cdd02280a1cfc78693ce1bc7eb5e4/Formula/python.rb
 
 install:
   - python3 --version
