--- a/Pipfile
+++ b/Pipfile
@@ -14,14 +14,11 @@ name = "pypi"
 "vtk-win32" = {file = "https://anaconda.org/clinicalgraphics/vtk/8.1.0/download/VTK-8.1.0-cp36-cp36m-win_amd64.whl", sys_platform="=='win32'"}
 
 [dev-packages]
-cmake = {version="~=0.9.0", index="pypi"}
-ninja = {version="~=1.7.2.post2", index="pypi"}
-setuptools = {version="~=38.5.1", index="pypi"}
-wheel = {version="~=0.30.0", index="pypi"}
-auditwheel = {version="~=1.8.0", sys_platform="=='linux'", index="pypi"}
-delocate = {version="~=0.7.3", sys_platform="=='darwin'", index="pypi"}
-flake8 = {version="~=3.5.0", index="pypi"}
-"anaconda-client" = {version="~=1.2.2", index="pypi"}
+cmake = "*"
+ninja = "*"
+setuptools = "*"
+wheel = "==0.30.0"
+"anaconda-client" = "*"
 
 [requires]
 python_version = "3.6"
